# PBL2-

./: BOOKING_WORKFLOW_SIMPLIFIED.md  CMakeLists.txt  CONTRIBUTING.md  HUONG_DAN_SU_DUNG.md  KHNINH22_GUIDE.md  README.md  REPORT_PART1.md  REPORT_PART2.md  REPORT_PART3.md  REPORT_PART4_1.md  REPORT_PART4_2.md  REPORT_PART4_3.md  REPORT_PART4_4.md  REPORT_PART4_5.md  REPORT_PART5.md  SIMPLIFIED_BOOKING_LOGIC.md  WORKFLOW_GUIDE.md  build.bat  check_image.ps1  create_service_images.ps1  main.cpp  run.bat
Core/CauTrucDuLieu/: DanhSachLienKet.h  HangDoi.h  MangDong.h  Ngan.h  NgayGio.cpp  NgayGio.h
Core/Models/: ConNguoi.cpp  ConNguoi.h  ConNguoi.h.bak  DatSan.cpp  DatSan.h  DichVu.cpp  DichVu.h  DichVuDat.cpp  DichVuDat.h  DonHangDichVu.cpp  DonHangDichVu.h  KhachHang.cpp  KhachHang.h  KhungGio.cpp  KhungGio.h  NguoiDung.cpp  NguoiDung.h  NhanVien.cpp  NhanVien.h  QuanTriVien.cpp  QuanTriVien.h  San.cpp  San.h  ThanhToan.cpp  ThanhToan.h  ThanhToanThe.cpp
Core/QuanLy/: BackupManager.cpp  BackupManager.h  FileManager.cpp  HeThongQuanLy.cpp  HeThongQuanLy.h  HeThongQuanLyCSV.cpp  QuanLyDatSan.cpp  QuanLyDatSan.h  QuanLyDichVu.cpp  QuanLyDichVu.h  QuanLyDonHangDichVu.cpp  QuanLyDonHangDichVu.h  QuanLyKhachHang.cpp  QuanLyKhachHang.h  QuanLyNhanVien.cpp  QuanLyNhanVien.h  QuanLySan.cpp  QuanLySan.h  QuanLyThanhToan.cpp  QuanLyThanhToan.h
Core/ThongKe/: ThongKe.h  ThongKeBooking.cpp  ThongKeBooking.h  ThongKeDichVu.cpp  ThongKeDichVu.h  ThongKeDoanhThu.cpp  ThongKeDoanhThu.h  ThongKeKhachHang.cpp  ThongKeKhachHang.h
Core/ThuatToan/: BinarySearchTree.h  HashTable.h
Core/Utils/: CSVHandler.cpp  CSVHandler.h  CSVHelper.cpp  CSVHelper.h  CSVManager.cpp  CSVManager.h  InvoiceGenerator.cpp  InvoiceGenerator.h
Data/: README.md  admin.csv  datsan.csv  datsan_dichvu.csv  dichvu.csv  donhangdichvu.csv  khachhang.csv  nhanvien.csv  san.csv
Docs/: BUILD.md  BUILD_RUN.md  CORE_API_REFERENCE.md  CUSTOMER_SELECTION_FEATURE.md  DAY14_FIELD_MANAGEMENT.md  DAY14_IMPLEMENTATION_SUMMARY.md  DAY2_SUMMARY.md  DAY3-4_COMPLETION_SUMMARY.md  DAY3-4_IMPROVEMENTS_SUMMARY.md  DAY5-6_ACCOUNT_PAGE_SUMMARY.md  FIXES_SUMMARY.md  HUONG_DAN_TIENG_VIET.md  INVOICE_DESIGN.md  KHNINH22_GUIDE.md  MIGRATION_NOTES.md  MIGRATION_TO_QT_PBL2.md  QUICKSTART.md  QUICKSTART_DAY2.md  STAFF_MANAGEMENT_GUIDE.md  STAFF_MANAGEMENT_QUICKSTART.md  STATISTICS_FEATURE_PLAN.md  STATUS.md  STYLING_GUIDE.md  TESTING_DAY2.md  UI_DESIGN_IMPROVEMENTS.md  UI_DEVELOPMENT_PLAN.md  UI_README.md  UPDATE_SUMMARY.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md
UI/Components/: ChartContainer.cpp  ChartContainer.h  DateRangePicker.cpp  DateRangePicker.h  Header.cpp  Header.h  MonthYearFilter.cpp  MonthYearFilter.h  RankingTable.cpp  RankingTable.h  Sidebar.cpp  Sidebar.h  SummaryCard.cpp  SummaryCard.h  TimelineGridWidget.cpp  TimelineGridWidget.h
UI/Dialogs/: AddCustomerDialog.cpp  AddCustomerDialog.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  EditPersonalInfoDialog.cpp  EditPersonalInfoDialog.h  FieldDialog.cpp  FieldDialog.h  InvoiceDialog.cpp  InvoiceDialog.h  MaintenanceDialog.cpp  MaintenanceDialog.h  ServiceSelectionDialog.cpp  ServiceSelectionDialog.h
UI/MainWindow/: MainWindow.cpp  MainWindow.h
UI/Pages/Account/: AccountPage.cpp  AccountPage.h
UI/Pages/Booking/: BookingDetailDialog.cpp  BookingDetailDialog.h  BookingListPage.cpp  BookingListPage.h  BookingPage.cpp  BookingPage.h  BookingTableTab.cpp  BookingTableTab.h  BookingTimelinePage.cpp.bak  CancelBookingDialog.cpp  CancelBookingDialog.h  TimelineTab.cpp  TimelineTab.h
UI/Pages/Customer/: CustomerManagementPage.cpp  CustomerManagementPage.h
UI/Pages/Field/: FieldManagementPage.cpp  FieldManagementPage.h
UI/Pages/Login/: LoginDialog.cpp  LoginDialog.h
UI/Pages/Payment/: InvoiceDetailDialog.cpp  InvoiceDetailDialog.h  InvoicePage.cpp  InvoicePage.h  PaymentListPage.cpp  PaymentListPage.h
UI/Pages/Service/: ServiceManagementPage.cpp  ServiceManagementPage.h  ServiceManagementWidget.cpp  ServiceManagementWidget.h  ServiceOrderWidget.cpp  ServiceOrderWidget.h
UI/Pages/Staff/: StaffManagementPage.cpp  StaffManagementPage.h
UI/Pages/Statistics/: BookingFieldTab.cpp  BookingFieldTab.h  CustomerTab.cpp  CustomerTab.h  RevenueTab.cpp  RevenueTab.h  ServiceTab.cpp  ServiceTab.h  StatisticsPage.cpp  StatisticsPage.h
UI/Resources/: resources.qrc
UI/Resources/styles/: app.qss
